--- a/css/nbt_style.css
+++ b/css/nbt_style.css
@@ -83,6 +83,10 @@ body {
     line-height: 40px;
 }
 
+.pc-menu {
+    display: none;
+}
+
 /* MENU */
 .menu {
     position: fixed;
@@ -145,9 +149,13 @@ body {
     height: 100vh;
 }
 
-.main-banner img {
+.main-banner img.mobile-img {
     width: 100%;
     height: 100vh;
+}
+
+.main-banner .pc-img {
+    display: none;
 }
 
 /* MERCHANDISE */
@@ -165,12 +173,6 @@ body {
     /* background: rgba(48, 48, 48, 0.6); */
     background: linear-gradient(to bottom, transparent 38px, #414141 38px) 0 0 / 100vw 40px repeat-y,
                 linear-gradient(to right, transparent 38px, #414141 38px) 0 0 / 40px 100vh repeat-x rgb(44, 44, 44);
-}
-
-.merchandise h4 {
-    color: #fff;
-    font-size: 1rem;
-    font-weight: 400;
 }
 
 .merchandise ul li {
@@ -487,11 +489,244 @@ body {
 
 /* TABLET */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+    #header {
+        height: 100px;
+    }
 
+    #header .header-wrapper .logo {
+        width: 70%;
+    }
+
+    #header .header-wrapper .logo a img {
+        width: 80%;
+        margin-top: 1.5rem;
+    }
+
+    .menuBtn {
+        top: 100px;
+        height: 50px;
+    }
+
+    .menu .menu-header {
+        top: 120px;
+    }
+
+    .menuBtn {
+        height: 50px;
+    }
+
+    .menuBtn i.xi-bars {
+        line-height: 50px;
+        font-size: 1.8rem;
+    }
+
+    .merchandise {
+        height: 400px;
+    }
+
+    .merchandise ul li img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .linkBtn a {
+        font-size: 1rem;
+    }
+
+    .album .album-wrapper {
+        display: flex;
+        gap: 2rem;
+        flex-wrap: wrap;
+    }
+
+    .album .album-wrapper article.tablet {
+        display: block;
+    }
+
+    .album .album-wrapper article {
+        width: calc(50% - 1rem);
+    }
+
+    #footer .sonyMusic-logo img {
+        width: 30%;
+        margin-bottom: 3rem;
+    }
+
+    #footer .linkList a {
+        font-size: 0.9rem;
+    }
 }
 
 
 /* PC */
 @media screen and (min-width: 1025px) {
+    #header {
+        height: 100px;
+    }
+
+    #header .header-wrapper .logo a img {
+        width: 58%;
+        line-height: 100px;
+    }
+
+    .menuBtn {
+        display: none;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .pc-menu {
+        display: block;
+        z-index: 9999;
+        position: fixed;
+        left: 0;
+        top: 100px;
+        width: 100%;
+        height: 60px;
+        background: rgba(0, 0, 0, 0.7);
+        backdrop-filter: blur(10px);
+        border-bottom: 1px solid #363636;
+    }
+
+    .pc-menu .pc-wrapper {
+        width: 98%;
+        height: 100%;
+        margin: 0 auto;
+    }
+
+    .pc-menu .pc-wrapper ul {
+        display: flex;
+        justify-content: right;
+        gap: 2.5rem;
+        height: 100%;
+    }
+
+    .pc-menu .pc-wrapper ul li {
+        position: relative;
+        padding: 0.5rem;
+    }
+
+    .pc-menu .pc-wrapper ul li a {
+        text-decoration: none;
+        font-size: 0.9rem;
+        font-weight: 300;
+        color: #34519b;
+        line-height: 50px;
+        transition: all .4s;
+    }
+
+    .pc-menu .pc-wrapper ul li a:hover {
+        color: #fff;
+    }
     
+    .main-banner {
+        width: 100%;
+        height: auto;
+        margin-top: 150px;
+    }
+
+    .main-banner .mobile-img {
+        display: none;
+    }
+
+    .main-banner img.pc-img {
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+
+    .tour-dates .dates-wrapper .section-title {
+        text-align: left;
+    }
+
+    .tour-dates .dates-wrapper .dates article {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .album .album-wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        padding: 40px 20px;
+        grid-auto-rows: 1fr;
+    }
+
+    .album .album-wrapper article.tablet, .album .album-wrapper article.mobile, .album .album-wrapper article.pc {
+        display: block;
+    }
+
+    .album-item {
+        position: relative;
+    }
+
+    .album-item.size-large {
+        grid-column: span 2;
+    }
+
+    .album-item.size-vertical {
+        grid-row: span 2;
+    }
+
+    .album-item a {
+        display: block;
+        position: relative;
+        overflow: hidden;
+        height: 100%;
+    }
+
+    .album-item img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform .3s ease;
+    }
+
+    .album-txt {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: #fff;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: opacity .4s ease;
+        padding: 20px;
+        text-align: center;
+        box-sizing: border-box;
+        pointer-events: none;
+    }
+
+    .album-txt h4 {
+        font-size: 1rem;
+        margin-bottom: 10px;
+    }
+
+    .album-txt p {
+        margin-bottom: 15px;
+    }
+
+    .album-txt a {
+        display: inline-block;
+        padding: 8px 15px;
+        text-decoration: none;
+        color: #fff;
+        font-weight: 400;
+        pointer-events: auto;
+    }
+
+    .album-item:hover .album-txt {
+        opacity: 1;
+    }
+
+    .album-item:hover img {
+        transform: scale(1.05);
+    }
 }
